--- a/app/src/main/res/layout/fragment_bottom_sheet_hideable.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_hideable.xml
@@ -12,6 +12,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="322dp"
+                    android:layout_marginTop="56.14dp"
+                    android:layout_marginBottom="723.86dp"
+                    android:src="@drawable/back_map"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <FrameLayout
                 android:id="@+id/fl_container"
                 android:layout_width="match_parent"
