--- a/app/src/main/res/layout/layout_search_bottom_expand.xml
+++ b/app/src/main/res/layout/layout_search_bottom_expand.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="viewModel"
-            type="kr.foorun.uni_eat.feature.map.dialog.ShopBottomSheetViewModel" />
+            type="kr.foorun.uni_eat.feature.map.bottom_sheet.fragment.CollapseViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
