add glide BaseImageView.kt and applied test data for bottomSheet

--- a/app/src/main/res/layout/layout_shop_bottom_collapse.xml
+++ b/app/src/main/res/layout/layout_shop_bottom_collapse.xml
@@ -126,7 +126,9 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:id="@+id/shopImages_RV"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="17dp"
