--- a/app/src/main/res/layout/item_shop_image.xml
+++ b/app/src/main/res/layout/item_shop_image.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="article"
+            type="kr.foorun.data.article.Article" />
 
         <variable
             name="viewModel"
@@ -10,12 +13,14 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:layout_marginEnd="5dp"
         app:cardCornerRadius="4dp"
         android:layout_width="103dp"
         android:layout_height="103dp">
 
         <kr.foorun.uni_eat.base.view.base.BaseImageView
             android:id="@+id/shopImage_IV"
+            app:glide="@{article.shopImages[0]}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
