--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,31 +6,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/red"
         tools:context=".feature.splash.SplashActivity">
 
-        <com.airbnb.lottie.LottieAnimationView
+        <kr.foorun.uni_eat.base.view.base.BaseImageView
             android:id="@+id/splash_IV"
-            android:layout_width="164dp"
-            android:layout_height="164dp"
-            android:layout_marginTop="205dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:visibility="invisible"
-            app:srcCompat="@android:drawable/presence_away"
-            />
-
-        <TextView
-            android:id="@+id/splash_TV"
-            android:layout_width="165dp"
-            android:layout_height="41dp"
-            android:textSize="28sp"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/splash_IV" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/img_splash" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
