--- a/app/src/main/res/layout/layout_search_bottom_expand.xml
+++ b/app/src/main/res/layout/layout_search_bottom_expand.xml
@@ -1,189 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
             name="viewModel"
-            type="kr.foorun.uni_eat.feature.map.bottom_sheet.fragment.CollapseViewModel" />
+            type="kr.foorun.uni_eat.feature.map.bottom_sheet.fragment.search.SearchExpandViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/dialogRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/head_CL"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/arrowUp_IV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
+                android:layout_marginBottom="86dp"
+                android:onClick="@{() -> viewModel.arrowClicked()}"
                 android:src="@drawable/arrow_up"
-                android:layout_marginTop="9dp"
-                android:layout_marginBottom="19dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/search_LL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginEnd="186dp"
+                android:layout_marginTop="49dp"
+                android:layout_marginBottom="29dp"
+                app:layout_constraintEnd_toStartOf="@+id/order_LL"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/shopName_TV"/>
-
-            <kr.foorun.uni_eat.base.view.base.BaseTextView
-                android:id="@+id/shopName_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:text="asdasdasd"
-                android:textStyle="bold"
-                android:textSize="25sp"
-                android:layout_marginTop="36dp"
-                android:layout_marginStart="19.5dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@id/shopInfoLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/shopInfoLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="9dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="21.5dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shopName_TV">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <kr.foorun.uni_eat.base.view.base.BaseTextView
-                    android:id="@+id/shopNick_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="정건"
-                    android:textSize="15sp"
-                    android:textColor="@color/smallTextColor"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/vertical_line_V"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <View
-                    android:id="@+id/vertical_line_V"
-                    android:layout_width="1dp"
-                    android:layout_height="18dp"
-                    android:background="@drawable/vertical_line"
-                    android:layout_marginStart="7.5dp"
-                    android:layout_marginEnd="7.5dp"
-                    app:layout_constraintStart_toEndOf="@id/shopNick_TV"
-                    app:layout_constraintEnd_toStartOf="@id/shopKind_TV"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    android:text="@string/searchResult"
+                    android:layout_marginEnd="5dp"
+                    android:textSize="21sp"
+                    android:textStyle="bold" />
 
                 <kr.foorun.uni_eat.base.view.base.BaseTextView
-                    android:id="@+id/shopKind_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:text="레스토랑"
-                    android:textColor="@color/smallTextColor"
-                    app:layout_constraintStart_toEndOf="@id/vertical_line_V"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:text="19"
+                    android:textColor="@color/red"
+                    android:textSize="21sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <View
-                android:id="@+id/horizon_line_v"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/horizen_line"
-                android:layout_marginTop="9dp"
-                android:layout_marginStart="17dp"
-                android:layout_marginEnd="32dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/shopExplain_TV"
-                app:layout_constraintTop_toBottomOf="@id/shopInfoLayout"/>
-
-            <kr.foorun.uni_eat.base.view.base.BaseTextView
-                android:id="@+id/shopExplain_TV"
+            <LinearLayout
+                android:id="@+id/order_LL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="분위기 좋은 파스타 맛집"
-                android:layout_marginStart="20.5dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginBottom="11dp"
-                app:layout_constraintBottom_toTopOf="@id/shopImages_RV"
-                app:layout_constraintTop_toBottomOf="@id/horizon_line_v"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/shopImages_RV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="17dp"
-                android:layout_marginBottom="7dp"
-                app:layout_constraintBottom_toTopOf="@id/button_CL"
-                app:layout_constraintTop_toBottomOf="@id/shopExplain_TV"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/button_CL"
-                android:layout_width="match_parent"
-                android:layout_height="84dp"
+                android:layout_marginTop="54dp"
+                android:layout_marginEnd="20.94dp"
+                android:layout_marginBottom="33dp"
+                app:layout_constraintStart_toEndOf="@+id/search_LL"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shopImages_RV"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
 
-                <ImageView
-                    android:id="@+id/heart_IV"
-                    android:layout_width="19.16dp"
-                    android:layout_height="16.71dp"
-                    android:src="@drawable/heart"
-                    android:layout_marginStart="23.42dp"
-                    android:layout_marginTop="17.75dp"
-                    android:layout_marginBottom="49.6dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/recommendOrder"
+                    android:layout_marginEnd="5dp"
+                    android:textSize="13sp"/>
 
-                <ImageView
-                    android:id="@+id/share_IV"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/share"
-                    android:layout_marginStart="236.42dp"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="46.05dp"
-                    android:layout_marginEnd="31dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/heart_IV"/>
-
-                <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="19.12dp"
-                    android:src="@drawable/bookmark"
-                    android:layout_marginTop="16.12dp"
-                    android:layout_marginBottom="48.74dp"
-                    android:layout_marginEnd="27dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/share_IV"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrow_down"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/head_CL"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
