--- a/app/src/main/res/values/attr_base_text.xml
+++ b/app/src/main/res/values/attr_base_text.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="BaseEditTextView">
+    <declare-styleable name="BaseTextView">
         <attr name="android:text"/>
         <attr name="android:textColor"/>
-        <attr name="android:hint"/>
     </declare-styleable>
 </resources>
