--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="invisible">#00000000</color>
 
     <color name="LargeTextColor">#191919</color>
     <color name="smallTextColor">#595959</color>
     <color name="black_60">#99000000</color>
+    <color name="red">#FD5422</color>
 </resources>
