--- a/app/src/main/res/layout/base_constraint.xml
+++ b/app/src/main/res/layout/base_constraint.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="kr.foorun.uni_eat.base.mvvm.BaseViewModel" />
+            type="kr.foorun.uni_eat.base.viewmodel.BaseViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
