--- a/app/src/main/res/layout/fragment_shop_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_shop_bottom_sheet.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="kr.foorun.uni_eat.base.mvvm.BaseViewModel" />
+            type="kr.foorun.uni_eat.base.viewmodel.BaseViewModel" />
     </data>
 
     <FrameLayout
