--- a/app/src/main/res/layout/fragment_search_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_search_bottom_sheet.xml
@@ -7,69 +7,127 @@
             type="kr.foorun.uni_eat.base.viewmodel.BaseViewModel" />
     </data>
 
-    <FrameLayout
-        android:id="@+id/root"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/search_CL"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="110dp"
+            android:background="@color/white"
+            android:animateLayoutChanges="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:id="@+id/view_content"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="64dp"
+                android:layout_marginStart="21dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_gravity="bottom">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageView
-                        android:id="@+id/back_BTN"
-                        android:onClick="@{() -> viewModel.backClicked()}"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginStart="21dp"
-                        android:layout_marginEnd="322dp"
-                        android:layout_marginTop="56.14dp"
-                        android:layout_marginBottom="723.86dp"
-                        android:src="@drawable/back_map"
-                        android:visibility="gone"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:onClick="@{() -> viewModel.backClicked()}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="13.38dp"
+                    android:src="@drawable/arrow_left" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="23sp"
+                    android:layout_marginEnd="221dp"
+                    android:text="제육볶음"/>
 
-                <FrameLayout
-                    android:id="@+id/fl_container"
-                    android:layout_width="match_parent"
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:onClick="@{() -> viewModel.backClicked()}"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@drawable/bg_white_top_radius_16dp"
-                    android:orientation="vertical"
-                    app:behavior_hideable="true"
-                    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+                    android:layout_gravity="center"
+                    android:src="@drawable/close"/>
+            </LinearLayout>
 
-                    <FrameLayout
-                        android:id="@+id/view_collapse_container"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <FrameLayout
+            android:id="@+id/root"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/search_CL"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.coordinatorlayout.widget.CoordinatorLayout
+                    android:id="@+id/view_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_gravity="bottom">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:animateLayoutChanges="true" />
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:id="@+id/back_BTN"
+                            android:onClick="@{() -> viewModel.backClicked()}"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_marginStart="21dp"
+                            android:layout_marginEnd="322dp"
+                            android:layout_marginTop="56.14dp"
+                            android:layout_marginBottom="723.86dp"
+                            android:src="@drawable/back_map"
+                            android:visibility="gone"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <FrameLayout
-                        android:id="@+id/view_expand_container"
+                        android:id="@+id/fl_container"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:animateLayoutChanges="true" />
+                        android:background="@drawable/bg_white_top_radius_16dp"
+                        android:orientation="vertical"
+                        app:behavior_hideable="true"
+                        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-                </FrameLayout>
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+                        <FrameLayout
+                            android:id="@+id/view_collapse_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:animateLayoutChanges="true" />
+
+                        <FrameLayout
+                            android:id="@+id/view_expand_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:animateLayoutChanges="true" />
+
+                    </FrameLayout>
+                </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
