--- a/app/src/main/res/drawable-v24/orange_button.xml
+++ b/app/src/main/res/drawable-v24/orange_button.xml
@@ -2,5 +2,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="#66000000">
     <item
-        android:drawable="@drawable/radius"/>
+        android:drawable="@drawable/radius_black_24"/>
 </ripple>
