--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -10,51 +10,69 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/teal_200"
+        android:background="@color/invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/mainSearch_CL"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="187dp"
+            android:background="@drawable/gradient_bottom_28"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <FrameLayout
-                android:id="@+id/map_FL"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/shop"/>
-
-            <TextView
-                android:id="@+id/shop"
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="shop"
-                android:onClick="@{() -> viewModel.showShopBottom()}"
-                android:textSize="20sp"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="73dp"
+                android:layout_marginEnd="346.38dp"
+                android:layout_marginBottom="98.76dp"
+                android:src="@drawable/arrow_left"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/search"
-                android:layout_width="wrap_content"
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
+                android:layout_width="310dp"
+                android:layout_height="38dp"
+                android:layout_marginStart="44dp"
+                android:layout_marginTop="62dp"
+                android:layout_marginEnd="21dp"
+                android:layout_marginBottom="87dp"
+                android:src="@drawable/main_search"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/searchTag_RC"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="search"
-                android:onClick="@{() -> viewModel.showSearchBottom()}"
-                android:layout_marginTop="10dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shop" />
+                android:layout_marginStart="38dp"
+                android:layout_marginTop="113dp"
+                android:layout_marginEnd="21dp"
+                android:layout_marginBottom="36dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <RelativeLayout
+            android:id="@+id/map_FL"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/mainSearch_CL"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <FrameLayout
             android:id="@+id/view_bottom_sheet"
