--- a/presentation/src/main/res/layout/fragment_splash.xml
+++ b/presentation/src/main/res/layout/fragment_splash.xml
@@ -3,24 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.map.bottom_sheet.shop_detail.ShopDetailActivity">
+        android:background="@color/red"
+        tools:context=".feature.splash.SplashFragment">
 
-        <TextView
+        <kr.foorun.uni_eat.base.view.base.BaseImageView
+            android:id="@+id/splash_IV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:text="ShopDetailActivity"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/img_logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
