--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
     <color name="gray">#F3F3F3</color>
     <color name="search_tag_non">#E5E4EC</color>
     <color name="search_tag_pick">#201F31</color>
+    
+    <color name="ExplainTextColor">#FFC8B8</color>
 
 </resources>
