--- a/presentation/src/main/res/layout/fragment_shop_detail.xml
+++ b/presentation/src/main/res/layout/fragment_shop_detail.xml
@@ -1,24 +1,292 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="asd"
+            type="String" />
+        <variable
+            name="viewModel"
+            type="kr.foorun.uni_eat.feature.map.shop_detail.fragment.ShopDetailViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SHOP_DETAIL"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scroll"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_constraint"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/detail_RC"
+                        android:layout_width="match_parent"
+                        android:layout_height="535dp"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <kr.foorun.uni_eat.base.view.base.shop_detail.indicator.CircleIndicator
+                        android:id="@+id/test2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@id/detail_RC" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <kr.foorun.uni_eat.base.view.base.BaseTextView
+                        android:id="@+id/shopName_TV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:text="카인드"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="19.5dp"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toTopOf="@id/shopInfoLayout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/shopInfoLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="9dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginStart="21.5dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/shopName_TV">
+
+                        <kr.foorun.uni_eat.base.view.base.BaseTextView
+                            android:id="@+id/shopNick_TV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="정건"
+                            android:textSize="15sp"
+                            android:textColor="@color/smallTextColor"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/vertical_line_V"
+                            app:layout_constraintStart_toStartOf="parent"/>
+
+                        <View
+                            android:id="@+id/vertical_line_V"
+                            android:layout_width="1dp"
+                            android:layout_height="18dp"
+                            android:background="@drawable/vertical_line"
+                            android:layout_marginStart="7.5dp"
+                            android:layout_marginEnd="7.5dp"
+                            app:layout_constraintStart_toEndOf="@id/shopNick_TV"
+                            app:layout_constraintEnd_toStartOf="@id/shopKind_TV"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
+
+                        <kr.foorun.uni_eat.base.view.base.BaseTextView
+                            android:id="@+id/shopKind_TV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:text="레스토랑"
+                            android:textColor="@color/smallTextColor"
+                            app:layout_constraintStart_toEndOf="@id/vertical_line_V"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <View
+                        android:id="@+id/horizon_line_v"
+                        android:layout_width="match_parent"
+                        android:layout_height="0.7dp"
+                        android:background="@drawable/horizen_line"
+                        android:layout_marginTop="9dp"
+                        android:layout_marginStart="17dp"
+                        android:layout_marginEnd="32dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toTopOf="@id/shopExplain_TV"
+                        app:layout_constraintTop_toBottomOf="@id/shopInfoLayout"/>
+
+                    <kr.foorun.uni_eat.base.view.base.BaseTextView
+                        android:id="@+id/shopExplain_TV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:text="분위기 좋은 파스타 맛집"
+                        android:layout_marginStart="20.5dp"
+                        android:layout_marginTop="14dp"
+                        android:layout_marginBottom="11dp"
+                        app:layout_constraintTop_toBottomOf="@id/horizon_line_v"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <kr.foorun.uni_eat.base.view.base.shop_detail.BaseInformation
+                    android:layout_marginTop="29dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:information="@string/phone_number"
+                    app:value="010 1234 1234" />
+
+                <kr.foorun.uni_eat.base.view.base.shop_detail.BaseInformation
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:information="@string/location"
+                    app:value="영일중" />
+
+                <kr.foorun.uni_eat.base.view.base.shop_detail.BaseInformation
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:information="@string/price"
+                    app:value="20,000원 대" />
+
+                <kr.foorun.uni_eat.base.view.base.shop_detail.BaseInformation
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:information="@string/address"
+                    app:value="경기 수원시 영통구" />
+
+                <kr.foorun.uni_eat.base.view.base.shop_detail.BaseInformation
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:information="@string/menu"
+                    app:show_arrow="true" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/menu_recycler"
+                    android:visibility="gone"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/tag_recycler"
+                    android:visibility="gone"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/notice_add"
+                    android:textSize="15sp"
+                    android:textColor="@color/smallTextColor"/>
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:layout_marginTop="41dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/article"
+                    android:textSize="21sp"
+                    android:textColor="@color/LargeTextColor"
+                    android:textStyle="bold"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
+        <kr.foorun.uni_eat.base.view.base.BaseImageView
+            android:id="@+id/test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_left_white"
+            android:layout_marginTop="73dp"
+            android:layout_marginStart="21dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+        
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottom_constraint"
+            android:layout_width="0dp"
+            android:layout_height="84dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="30sp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
+                android:id="@+id/bookmark_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/bookmark"
+                android:layout_marginTop="16.18dp"
+                android:layout_marginEnd="27dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <kr.foorun.uni_eat.base.view.base.BaseImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/share"
+                android:layout_marginTop="13.99dp"
+                android:layout_marginEnd="31dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/bookmark_image"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
