--- a/presentation/src/main/res/layout/item_shop_image.xml
+++ b/presentation/src/main/res/layout/item_shop_image.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="article"
-            type="kr.foorun.data.article.Article" />
+            type="kr.foorun.model.article.Article" />
 
         <variable
             name="viewModel"
