--- a/presentation/src/main/res/layout/item_menu.xml
+++ b/presentation/src/main/res/layout/item_menu.xml
@@ -12,6 +12,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginBottom="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
