--- a/presentation/src/main/res/layout/base_constraint.xml
+++ b/presentation/src/main/res/layout/base_constraint.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/back_BTN"
+            android:id="@+id/back_button"
             android:layout_width="18dp"
             android:layout_height="24dp"
             android:layout_marginTop="73dp"
