--- a/presentation/src/main/res/layout/fragment_search_bottom_sheet.xml
+++ b/presentation/src/main/res/layout/fragment_search_bottom_sheet.xml
@@ -3,6 +3,9 @@
 
     <data>
         <variable
+            name="word"
+            type="String" />
+        <variable
             name="viewModel"
             type="kr.foorun.uni_eat.base.viewmodel.BaseViewModel" />
     </data>
@@ -12,7 +15,7 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/search_CL"
+            android:id="@+id/search_constraint"
             android:layout_width="match_parent"
             android:layout_height="110dp"
             android:background="@color/white"
@@ -46,7 +49,7 @@
                     android:textStyle="bold"
                     android:textSize="23sp"
                     android:layout_marginEnd="221dp"
-                    android:text="제육볶음"/>
+                    android:text="@{word}"/>
 
                 <kr.foorun.uni_eat.base.view.base.BaseImageView
                     android:onClick="@{() -> viewModel.backClicked()}"
@@ -62,7 +65,7 @@
             android:id="@+id/root"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/search_CL"
+            app:layout_constraintTop_toBottomOf="@+id/search_constraint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -85,7 +88,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <ImageView
-                            android:id="@+id/back_BTN"
+                            android:id="@+id/back_button"
                             android:onClick="@{() -> viewModel.backClicked()}"
                             android:layout_width="32dp"
                             android:layout_height="32dp"
