--- a/presentation/src/main/res/layout/fragment_shop_detail.xml
+++ b/presentation/src/main/res/layout/fragment_shop_detail.xml
@@ -7,9 +7,6 @@
 
     <data>
         <variable
-            name="asd"
-            type="String" />
-        <variable
             name="viewModel"
             type="kr.foorun.uni_eat.feature.map.shop_detail.fragment.ShopDetailViewModel" />
     </data>
@@ -62,7 +59,7 @@
                     android:layout_height="wrap_content">
 
                     <kr.foorun.uni_eat.base.view.base.BaseTextView
-                        android:id="@+id/shopName_TV"
+                        android:id="@+id/shop_name_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -72,22 +69,22 @@
                         android:layout_marginTop="16dp"
                         android:layout_marginStart="19.5dp"
                         android:layout_marginBottom="8dp"
-                        app:layout_constraintBottom_toTopOf="@id/shopInfoLayout"
+                        app:layout_constraintBottom_toTopOf="@id/shop_info_constraint"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/shopInfoLayout"
+                        android:id="@+id/shop_info_constraint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="9dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginStart="21.5dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/shopName_TV">
+                        app:layout_constraintTop_toBottomOf="@id/shop_name_text">
 
                         <kr.foorun.uni_eat.base.view.base.BaseTextView
-                            android:id="@+id/shopNick_TV"
+                            android:id="@+id/shop_nick_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="정건"
@@ -95,36 +92,36 @@
                             android:textColor="@color/smallTextColor"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@id/vertical_line_V"
+                            app:layout_constraintEnd_toStartOf="@id/vertical_line_view"
                             app:layout_constraintStart_toStartOf="parent"/>
 
                         <View
-                            android:id="@+id/vertical_line_V"
+                            android:id="@+id/vertical_line_view"
                             android:layout_width="1dp"
                             android:layout_height="18dp"
                             android:background="@drawable/vertical_line"
                             android:layout_marginStart="7.5dp"
                             android:layout_marginEnd="7.5dp"
-                            app:layout_constraintStart_toEndOf="@id/shopNick_TV"
-                            app:layout_constraintEnd_toStartOf="@id/shopKind_TV"
+                            app:layout_constraintStart_toEndOf="@id/shop_nick_text"
+                            app:layout_constraintEnd_toStartOf="@id/shop_kind_text"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent" />
 
                         <kr.foorun.uni_eat.base.view.base.BaseTextView
-                            android:id="@+id/shopKind_TV"
+                            android:id="@+id/shop_kind_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="15sp"
                             android:text="레스토랑"
                             android:textColor="@color/smallTextColor"
-                            app:layout_constraintStart_toEndOf="@id/vertical_line_V"
+                            app:layout_constraintStart_toEndOf="@id/vertical_line_view"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
-                        android:id="@+id/horizon_line_v"
+                        android:id="@+id/horizon_line_view"
                         android:layout_width="match_parent"
                         android:layout_height="0.7dp"
                         android:background="@drawable/horizen_line"
@@ -133,11 +130,11 @@
                         android:layout_marginEnd="32dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/shopExplain_TV"
-                        app:layout_constraintTop_toBottomOf="@id/shopInfoLayout"/>
+                        app:layout_constraintBottom_toTopOf="@id/shop_explain_text"
+                        app:layout_constraintTop_toBottomOf="@id/shop_info_constraint"/>
 
                     <kr.foorun.uni_eat.base.view.base.BaseTextView
-                        android:id="@+id/shopExplain_TV"
+                        android:id="@+id/shop_explain_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="15sp"
@@ -145,7 +142,7 @@
                         android:layout_marginStart="20.5dp"
                         android:layout_marginTop="14dp"
                         android:layout_marginBottom="11dp"
-                        app:layout_constraintTop_toBottomOf="@id/horizon_line_v"
+                        app:layout_constraintTop_toBottomOf="@id/horizon_line_view"
                         app:layout_constraintStart_toStartOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -207,7 +204,7 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/searchTag_recycler"
+                    android:id="@+id/search_tag_recycler"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="21dp"
                     android:layout_marginEnd="21dp"
@@ -251,9 +248,10 @@
         </androidx.core.widget.NestedScrollView>
 
         <kr.foorun.uni_eat.base.view.base.BaseImageView
-            android:id="@+id/test"
+            android:id="@+id/white_back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.backClicked()}"
             android:src="@drawable/arrow_left_white"
             android:layout_marginTop="73dp"
             android:layout_marginStart="21dp"
