--- a/presentation/src/main/res/layout/fragment_splash.xml
+++ b/presentation/src/main/res/layout/fragment_splash.xml
@@ -10,7 +10,7 @@
         tools:context=".feature.splash.SplashFragment">
 
         <kr.foorun.uni_eat.base.view.base.BaseImageView
-            android:id="@+id/splash_IV"
+            android:id="@+id/splash_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
