--- a/presentation/src/main/res/layout/item_search_tag.xml
+++ b/presentation/src/main/res/layout/item_search_tag.xml
@@ -12,7 +12,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tagItem_CL"
+        android:id="@+id/tag_item_constraint"
         app:setTagDrawable="@{searchTag.picked}"
         android:onClick="@{() -> viewModel.tagClicked(searchTag)}"
         android:layout_marginEnd="11dp"
